fix: make navbar links more readable in dark theme

--- a/webserver/web/src/css/dark-style.scss
+++ b/webserver/web/src/css/dark-style.scss
@@ -49,6 +49,11 @@ a {
 // remove the unsightly rounded corners on navbars
 .navbar {
   border-radius: unset;
+
+  a:hover, a:active {
+    background-color: darken($navbar-background-color, 5);
+    color: $white;
+  }
 }
 
 input[type="text"], input[type="email"], input[type="password"], .select select, textarea {
